@@ -1428,7 +1428,6 @@ instance Semigroup InstallFlags where
 
 data UploadFlags = UploadFlags {
     uploadCandidate   :: Flag Bool,
-    uploadCheck       :: Flag Bool,
     uploadDoc         :: Flag Bool,
     uploadUsername    :: Flag Username,
     uploadPassword    :: Flag Password,
@@ -1439,7 +1438,6 @@ data UploadFlags = UploadFlags {
 defaultUploadFlags :: UploadFlags
 defaultUploadFlags = UploadFlags {
     uploadCandidate   = toFlag True,
-    uploadCheck       = toFlag False,
     uploadDoc         = toFlag False,
     uploadUsername    = mempty,
     uploadPassword    = mempty,
@@ -1465,11 +1463,6 @@ uploadCommand = CommandUI {
         "Publish the package instead of uploading it as a candidate."
         uploadCandidate (\v flags -> flags { uploadCandidate = v })
         falseArg
-
-      ,option ['c'] ["check"]
-         "Do not upload, just do QA checks."
-        uploadCheck (\v flags -> flags { uploadCheck = v })
-        trueArg
 
       ,option ['d'] ["documentation"]
         "Upload documentation instead of a source package. Cannot be used together with --check. \
